Update theme and add plugins in config

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,10 @@ defaults:
       layout: project
 sass:
   sass_dir: assets/css
-theme: null  # using custom layout/styles
+theme: jekyll-theme-cayman
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+
 paginate: 8
 paginate_path: "/articles/page:num"
