--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: "SQ | Cybersecurity Portfolio"
-description: "Offensive & defensive security articles, playbooks, and demos"
-url: ""  # set to https://<username>.github.io/<repo> when ready
+title: "Portfolio SQLTemp Cybersécurité"
+description: "Projets, analyses, CTFs et notes de cours"
+url: "https://sqltemp.github.io/portfolio"  # set to https://<username>.github.io/<repo> when ready
 baseurl: "/portfolio"  # set if using a project site, e.g., /portfolio
-author: SQ
+author: Thierry Matrat
 markdown: kramdown
 highlighter: rouge
 permalink: /:categories/:title/
@@ -24,7 +24,7 @@ defaults:
       layout: project
 sass:
   sass_dir: assets/css
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
