--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: "Portfolio SQLTemp Cybersécurité"
 description: "Projets, analyses, CTFs et notes de cours"
-url: "https://sqltemp.github.io/portfolio"  # set to https://<username>.github.io/<repo> when ready
-baseurl: "/portfolio"  # set if using a project site, e.g., /portfolio
+
+# IMPORTANT : adapter à ton domaine custom
+url: "https://www.sqltemp.com"
+baseurl: ""   # vide, puisque ton site est servi à la racine du domaine
 author: Solutions SQLTemp Cybersécurité
 markdown: kramdown
 highlighter: rouge
